- Fix to SnmpAdminString, SnmpTagList, SnmpTagValue types to make them
  supporting UTF-8 initializers.
- Fix to v1/v2c message processing module which used to refer to a
  bogus stateReference in some cases what causes SNMP engine crashes.
- Asyncsock sockets now configured with SO_REUSEADDR option to fix possible
  Windows error 10048.
- Typos fixed in error-status constants at CommandResponder
- Missing import added to oneliner auth module.
- Cosmetic changes to v3arch example scripts.

Revision 4.2.4
--------------

- SNMPv3 high-level and native API examples reworked and extended to cover
  many use cases.
- The missing functionality of NOTIFICATION-TYPE objects being looked up
  at local Management Instrumentation and attached to TRAP/INFORM message
  by Notification Originator is now fully implemented.
- The missing functionality of passing Response PDU contents of INFORM
  request is now implemented at Notification Originator app. The return
  value of NotificationOriginator.sendNotification is now a composite object
  that includes errorStatus, errorIndex and varBinds.
- The missing functionality of passing lookupNames & lookupValues params
  to Notification Originator is now implemented. It may make sense for
  INFORMs.
- The missing functionality of passing contextName to oneliner
  version of NotificationOriginator.sendNotification is now implemented.
- Oneliner example apps now include cases where non-default SNMP
  ContextEngineId/ContextName/SecurityEngineId is used.
- The contextName parameter of SnmpContext.getMibInstrum made optional.
- AbstractMibInstrumController class added as a base class for all possible
  kinds of Management Instrumentation controllers.
- Report package version on debugging code initialization.
- MibInstrumController.getMibBuilder() added.
- I/O sockets buffer sizes made configurable, minimum default is now 
  forced to be no less than 2**17 (to fit two huge datagrams).